--- a/app/src/main/res/layout/panel_item_row.xml
+++ b/app/src/main/res/layout/panel_item_row.xml
@@ -8,6 +8,7 @@
     app:cardElevation="6sp">
 
     <LinearLayout
+        android:id="@+id/ll_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
