--- a/app/src/main/res/layout/product_item_row.xml
+++ b/app/src/main/res/layout/product_item_row.xml
@@ -78,7 +78,7 @@
                 android:textSize="15sp" />
 
             <TextView
-                android:id="@+id/txt_name_age"
+                android:id="@+id/txt_distance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -169,32 +169,30 @@
             android:layout_below="@+id/line"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="@dimen/padding_8dp"
             android:gravity="center"
+            android:layout_marginRight="@dimen/padding_8dp"
             android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/padding_8dp"
-                android:layout_marginRight="@dimen/padding_8dp"
-                android:padding="@dimen/padding_4sp"
-                android:src="@mipmap/edit"
-                app:tint="@color/colorPrimary" />
 
             <ImageView
                 android:id="@+id/img_edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginEnd="@dimen/padding_8dp"
+                android:layout_marginRight="@dimen/padding_8dp"
+                android:padding="@dimen/padding_8dp"
+                android:src="@mipmap/edit"
+                app:tint="@color/colorPrimary" />
+
+            <ImageView
+                android:id="@+id/img_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginStart="@dimen/padding_8dp"
                 android:layout_marginLeft="@dimen/padding_8dp"
-                android:padding="@dimen/padding_4sp"
+                android:padding="@dimen/padding_8dp"
                 android:src="@mipmap/delete"
                 app:tint="@color/yellow" />
         </LinearLayout>
